--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uniswap",
   "description": "Uniswap Exchange Protocol",
   "version": "0.1.0",
-  "homepage": "https://uniswap.exchange",
+  "homepage": "https://uniswap-kovan.gwei.cz",
   "private": true,
   "dependencies": {
     "@reach/dialog": "^0.2.8",
